2004-11-19  Werner Koch  <wk@g10code.com>

	* scrutmime.c (parse_message): Increase buffer to 1000 to detect
	EXE files with a long header before the PE mark.

2003-12-29  Werner Koch  <wk@gnupg.org>

	* addrutil.c (ProcessTexOp): Implemented modifier ":N=".

2003-12-16  Werner Koch  <wk@gnupg.org>

	* manifest-tool: Give hints on files not included in Manifest.

2003-11-22  Werner Koch  <wk@gnupg.org>

	* addrutil.c (FinishRecord): For mode 0, escape quote colons.

2003-11-18  Werner Koch  <wk@gnupg.org>

	* manifest-tool: New.

2003-07-20  Werner Koch  <wk@gnupg.org>

	* vegetarise.c (main): Fixed counting for mbox files.  Thanks to
	Andreas Beck.

2003-07-17  Werner Koch  <wk@gnupg.org>

	* vegetarise.c: Add minimal usage information.

2003-04-05  Werner Koch  <wk@gnupg.org>

	* mkdiff: Use awk to cope with the VERSION file.  This allows for
	multiline files.

2002-12-23  Werner Koch  <wk@gnupg.org>

	* webbsh.c (check_for_suid): Filter output of find.  Noted by
	Thomas Roessler.

2002-12-06  Werner Koch  <wk@gnupg.org>

	* webbsh.c: New.

2002-06-30  Werner Koch  <wk@gnupg.org>

	* mkdiff: New option --no-sign.
