@@ -1,3 +1,8 @@
+2004-12-09  Werner Koch  <wk@g10code.com>
+
+	* sha1sum.c: New based on SHA1- code from gnupg and out md5sum.
+	High noon to switch from MD5 checksums to sha1.
+
 2004-11-19  Werner Koch  <wk@g10code.com>
 
 	* scrutmime.c (parse_message): Increase buffer to 1000 to detect
